--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <head>
   <title>Le Cheesy Post</title>
   <meta charset='utf-8'>
-  <link rel="shortcut icon" href="https://raw.github.com/jlord/hack-spots/master/favico.png"/>
-  <link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic'>
   <link media="screen" rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body id="table">
-  <div id="envelope">
+  <a href="/letter.html" class="opening">
+    <div id="envelope">
     <div id="return" class="address">
       <dl>
         <dd>Machiko Yasuda</dd>
@@ -33,5 +32,6 @@
     </div>
     <h1>FIRST CLASS</h1>
   </div>
+  </a>
 </body>
 </html>
