--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link media="screen" rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body id="table">
-  <a href="/del-rey-recreation/letter.html" class="opening">
+  <a href="letter.html" class="opening">
     <div id="envelope">
     <div id="return" class="address">
       <dl>
